--- a/VIZE200401073/inst/extdata/Vize_Rapor_200401073_avci_elif.Rmd
+++ b/VIZE200401073/inst/extdata/Vize_Rapor_200401073_avci_elif.Rmd
@@ -74,3 +74,6 @@ Bar grafiğinde ise her yılın top 100 de ilk sıraya sahip olan kitapların de
 En düşük ranking oranına da Fifty Shades Of Grey: Book One of the Fifty Shades Trilogy (Fifty Shades Of Grey Series, 1) sahiptir.
 
 
+Q5 : Sonuçlar ve değerlendirmeler:
+
+Evet istediğim sonuçlara ulaştım ve bu bilgiler doğrultusunda "Read a book in heaven" kampanyası düzenlenme fırsatı yakalandı. Örnek olarak müşterilerin yapmış olduğu  alışverişin yanında A promise Land adlı kitap hediye olarak gönderilmeye karar verilebilir.
